Refactor anomalies route and docs for documents
